data/derived/comb/progs/unify/prog5276.ml.out
Characters 139-141:
  | Cosine e	      -> cos(pi * eval e)
                          ^^
Error: This expression has type float but an expression was expected of type
         int
